# pocket-cfo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  NOTICE  README.md  SPEC.md  agents-cli-manifest.yaml  pyproject.toml
.agents/: CONTEXT.md  mcp_config.json.example
.agents/skills/card-benefits/: SKILL.md
.agents/skills/card-benefits/resources/: cards.yaml
.agents/skills/statement-reconciler/: SKILL.md
.agents/skills/statement-reconciler/scripts/: reconcile.py
app/: __init__.py  agent.py  fast_api_app.py
app/agents/: __init__.py  calendar_agent.py  card_strategy.py  categorization.py  ingestion.py
app/app_utils/: telemetry.py  typing.py
app/data/: budgets.yaml
app/data/seed/: README.md  poisoned_receipt.json  sample_statement.csv
app/models/: __init__.py  schemas.py
app/tools/: __init__.py  aggregate.py  calendar_api.py  calendar_events.py  card_strategy.py  cards.py  categorize.py  ingest.py  injection_guard.py  ledger.py  reconcile.py  redaction.py  seed_utils.py
dashboard/: README.md  generate.py  index.html
docs/: WRITEUP.md  eval-methodology.md
docs/security/: secret-block-demo.md
scripts/: calendar_oauth_setup.py
tests/eval/: eval_config.yaml  metrics.py  run_eval.py
tests/eval/datasets/: pocket-cfo-dataset.json
tests/integration/: conftest.py
tests/unit/: test_agent_wiring.py  test_aggregate.py  test_calendar.py  test_calendar_api.py  test_calendar_mcp.py  test_card_strategy.py  test_categorize.py  test_ingest.py  test_injection.py  test_ledger.py  test_reconcile.py  test_redaction.py  test_schemas.py  test_seed_utils.py
